package edu.fiuba.algoChess.salud;

public interface Curable {

	public Salud curar(int salud);

}
