package edu.fiuba.algoChess.salud;

public interface Herible {
	public Salud herir(int salud);
}
