@startuml

title __SALUD's Class Diagram__\n

  namespace edu.fiuba.algoChess {
    namespace modelo.salud {
      interface edu.fiuba.algoChess.modelo.salud.Curable {
          {abstract} + curar()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.salud {
      interface edu.fiuba.algoChess.modelo.salud.Herible {
          {abstract} + herir()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.salud {
      abstract class edu.fiuba.algoChess.modelo.salud.Salud {
          # valorActual : double
          # valorCompleto : double
          + Salud()
          {abstract} + curar()
          + getValorActual()
          + getValorCompleto()
          + igualA()
          + llenar()
          + morir()
          + setValorActual()
          + setValorCompleto()
          + stateComportarse()
          + stateEstaVivo()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.salud {
      class edu.fiuba.algoChess.modelo.salud.SaludLlena {
          + SaludLlena()
          + curar()
          + herir()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.salud {
      class edu.fiuba.algoChess.modelo.salud.SaludMedia {
          + SaludMedia()
          + curar()
          + herir()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.salud {
      class edu.fiuba.algoChess.modelo.salud.SaludMuerto {
          + SaludMuerto()
          + curar()
          + herir()
          + stateComportarse()
          + stateEstaVivo()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.salud {
      interface edu.fiuba.algoChess.modelo.salud.StateVive {
          {abstract} + stateComportarse()
          {abstract} + stateEstaVivo()
      }
    }
  }
  

  edu.fiuba.algoChess.modelo.salud.Salud .up.|> edu.fiuba.algoChess.modelo.salud.Curable
  edu.fiuba.algoChess.modelo.salud.Salud .up.|> edu.fiuba.algoChess.modelo.salud.Herible
  edu.fiuba.algoChess.modelo.salud.Salud .up.|> edu.fiuba.algoChess.modelo.salud.StateVive
  edu.fiuba.algoChess.modelo.salud.SaludLlena -up-|> edu.fiuba.algoChess.modelo.salud.Salud
  edu.fiuba.algoChess.modelo.salud.SaludMedia -up-|> edu.fiuba.algoChess.modelo.salud.Salud
  edu.fiuba.algoChess.modelo.salud.SaludMuerto -up-|> edu.fiuba.algoChess.modelo.salud.Salud


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
